fix button background flicker

--- a/src/features/Filter/Filter.module.css
+++ b/src/features/Filter/Filter.module.css
@@ -34,6 +34,7 @@
   position: relative;
   cursor: pointer;
   margin-left: 2px;
+  z-index: 1;
 }
 
 .addButton::before, .addButton::after {
